Updated page Fasteners ChangeParameters/it

--- a/wiki/it/Fasteners_ChangeParameters.html
+++ b/wiki/it/Fasteners_ChangeParameters.html
@@ -1,33 +1,33 @@
-<link href="../site.css" rel="stylesheet" type="text/css"/>
-<div class="mw-page-container"><h1 class="firstHeading mw-first-heading" id="firstHeading"><span class="mw-page-title-main">Fasteners ChangeParameters/it</span></h1><div class="mw-parser-output"><div class="mw-pt-languages noprint" dir="ltr" lang="en"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a class="mw-pt-progress mw-pt-progress--complete" dir="ltr" href="../de\Fasteners_ChangeParameters.html" lang="de" title="Fasteners ParameterÄndern (100% translated)">Deutsch</a></li>
-<li><a class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" dir="ltr" href="../Fasteners_ChangeParameters.html" lang="en" title="Fasteners ChangeParameters (100% translated)">English</a></li>
-<li><a class="mw-pt-progress mw-pt-progress--complete" dir="ltr" href="../fr\Fasteners_ChangeParameters.html" lang="fr" title="Fasteners Paramètres de la fixation (100% translated)">français</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" dir="ltr" lang="it">italiano</span></li>
-<li><a class="mw-pt-progress mw-pt-progress--complete" dir="ltr" href="../pl\Fasteners_ChangeParameters.html" lang="pl" title="Elementy Złączne: Zmień parametry (100% translated)">polski</a></li>
-<li><a class="mw-pt-progress mw-pt-progress--low" dir="ltr" href="../ru\Fasteners_ChangeParameters.html" lang="ru" title="Fasteners Change fastener parameters (Изменить параметры изделия) (38% translated)">русский</a></li></ul></div>
-<div class="docnav" style="background-color: #ececef; border: 1px solid #a2a9b1; padding: 2px 10px; margin: 10px 0; line-height: 1; clear: both; overflow: hidden;">
-<div style="margin: 4px 0; float: left;"><span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="16" src="../File/Arrow-left.svg" width="16"/></span></span> <span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="16" src="../File/Fasteners_ScrewCalculator.svg" width="16"/></span></span> <a href="../it\Fasteners_ScrewCalculator.html" title="Fasteners ScrewCalculator/it">ScrewCalculator</a></div>
-<div style="margin: 4px 0; float: right;"><span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="16" src="../File/Freecad.svg" width="16"/></span></span></div>
-<div style="text-align:center"><a href="../it\Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
-<span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="24" src="../File/Fasteners_workbench_icon.svg" width="24"/></span></span></div>
+<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Fasteners ChangeParameters/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Fasteners+ChangeParameters&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="../de/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--complete" title="Fasteners Parameter&Auml;ndern (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../Fasteners_ChangeParameters.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Fasteners ChangeParameters (100% translated)" lang="en" dir="ltr">English</a></li>
+<li><a href="../fr/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--complete" title="Fasteners Param&egrave;tres de la fixation (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--complete" title="Elementy Z&#322;&#261;czne: Zmie&#324; parametry (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../ru/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--med" title="Fasteners Change fastener parameters (&#1048;&#1079;&#1084;&#1077;&#1085;&#1080;&#1090;&#1100; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1099; &#1080;&#1079;&#1076;&#1077;&#1083;&#1080;&#1103;) (38% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
+<div class="docnav">
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_ScrewCalculator.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Fasteners_3dPrintSettings.html" title="Fasteners 3dPrintSettings/it">Impostazioni stampa 3D</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
+    <div><a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
+ <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<table class="fcinfobox wikitable ct" style="float: right; width: 230px; margin-left: 1em" width="100%">
+<table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="32" src="../File/Fasteners_ChangeParameters.svg" width="32"/></span></span><span> </span>Fasteners: ChangeParameters
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_ChangeParameters.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>Fasteners: ChangeParameters
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Posizione nel menu
 </th></tr>
 <tr>
-<td class="ctEven">Fasteners → Change fastener parameters
+<td class="ctEven">Fasteners &rarr; Change fastener parameters
 </td></tr>
 <tr>
 <th class="ctOdd">Ambiente
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../it\Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
+<td class="ctEven"><a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Avvio veloce
@@ -48,69 +48,69 @@
 <td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
-<td class="ctToc"><br/><div aria-labelledby="mw-toc-heading" class="toc" id="toc" role="navigation"><input class="toctogglecheckbox" id="toctogglecheckbox" role="button" style="display:none" type="checkbox"/><div class="toctitle" dir="ltr" lang="en"><h2 id="mw-toc-heading">Contents</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
-<ul>
-<li class="toclevel-1 tocsection-1"><a href="#Descrizione"><span class="tocnumber">1</span> <span class="toctext">Descrizione</span></a></li>
-<li class="toclevel-1 tocsection-2"><a href="#Utilizzo"><span class="tocnumber">2</span> <span class="toctext">Utilizzo</span></a></li>
-</ul>
-</div>
+<td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>Il comando <span typeof="mw:File"><a class="mw-file-description" href="../File/Fasteners_ChangeParameters.svg"><img decoding="async" height="24" src="../File/Fasteners_ChangeParameters.svg" width="24"/></a></span> <b>Fasteners ChangeParameters</b> può essere utilizzato per modificare i parametri degli elementi di fissaggio.
+<p>Il comando <span typeof="mw:File"><a href="../index.php?title=Fasteners_ChangeParameters.svg&amp;filetimestamp=20240511171847&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ChangeParameters.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Fasteners ChangeParameters</b> pu&ograve; essere utilizzato per modificare i parametri degli elementi di fissaggio.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<ol><li>Selezionare uno o più elementi di fissaggio. Se vengono selezionati più elementi di fissaggio, devono essere solo viti, solo rondelle o solo dadi.</li>
+<ol><li>Selezionare uno o pi&ugrave; elementi di fissaggio. Se vengono selezionati pi&ugrave; elementi di fissaggio, devono essere solo viti, solo rondelle o solo dadi.</li>
 <li>Esistono diversi modi per richiamare il comando:
-<ul><li>Premere il pulsante <span style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.4em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a class="mw-file-description" href="../File/Fasteners_ChangeParameters.svg"><img decoding="async" height="16" src="../File/Fasteners_ChangeParameters.svg" width="16"/></a></span> <a class="mw-selflink selflink">Change fastener parameters</a></span>.</li>
-<li>Selezionare l'opzione <b>Fasteners → <span typeof="mw:File"><a class="mw-file-description" href="../File/Fasteners_ChangeParameters.svg"><img decoding="async" height="16" src="../File/Fasteners_ChangeParameters.svg" width="16"/></a></span> Change fastener parameters</b> dal menu.</li></ul></li>
-<li>Si apre il pannello delle attività <b>Change fastener parameters</b>.</li>
+<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Fasteners_ChangeParameters.svg&amp;filetimestamp=20240511171847&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ChangeParameters.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Change fastener parameters</a></span>.</li>
+<li>Selezionare l'opzione <b>Fasteners &rarr; <span typeof="mw:File"><a href="../index.php?title=Fasteners_ChangeParameters.svg&amp;filetimestamp=20240511171847&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ChangeParameters.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Change fastener parameters</b> dal menu.</li></ul></li>
+<li>Si apre il pannello delle attivit&agrave; <b>Change fastener parameters</b>.</li>
 <li>Facoltativamente modificare il <b>Fastener type</b>.</li>
 <li>Facoltativamente, modificare il diametro effettuando una delle seguenti operazioni:
 <ul><li>Selezionare la casella di controllo <b>Auto set diameter</b> per far corrispondere il diametro degli elementi di fissaggio con il bordo a cui sono attaccati.</li>
 <li>Deselezionare la casella di controllo <b>Auto set diameter</b> e selezionare un <b>Diameter</b> dall'elenco a discesa.</li></ul></li>
 <li>Lasciare deselezionata la casella di controllo <b>Set length</b>. Questa opzione attualmente non funziona.</li></ol>
-<p><br/>
+<p><br>
 </p>
-<div class="docnav" style="background-color: #ececef; border: 1px solid #a2a9b1; padding: 2px 10px; margin: 10px 0; line-height: 1; clear: both; overflow: hidden;">
-<div style="margin: 4px 0; float: left;"><span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="16" src="../File/Arrow-left.svg" width="16"/></span></span> <span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="16" src="../File/Fasteners_ScrewCalculator.svg" width="16"/></span></span> <a href="../it\Fasteners_ScrewCalculator.html" title="Fasteners ScrewCalculator/it">ScrewCalculator</a></div>
-<div style="margin: 4px 0; float: right;"><span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="16" src="../File/Freecad.svg" width="16"/></span></span></div>
-<div style="text-align:center"><a href="../it\Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
-<span class="mw-default-size" typeof="mw:File"><span><img decoding="async" height="24" src="../File/Fasteners_workbench_icon.svg" width="24"/></span></span></div>
+<div class="mw-translate-fuzzy">
+<div class="docnav">
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_ScrewCalculator.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Fasteners_ScrewCalculator.html" title="Fasteners ScrewCalculator/it">ScrewCalculator</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
+    <div><a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
+ <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
+</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
-<div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: #fefefe;"><span typeof="mw:File"><a class="mw-file-description" href="../File/Fasteners_workbench_icon.svg"><img decoding="async" height="24" src="../File/Fasteners_workbench_icon.svg" width="24"/></a></span> <a href="../it\Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
-<div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid #aaaaaa; text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: #fefefe;">
-<ul><li><a href="../it\Fasteners_Flip.html" title="Fasteners Flip/it">Fasteners Flip</a>, <a href="../it\Fasteners_Move.html" title="Fasteners Move/it">Fasteners Move</a>, <a href="../it\Fasteners_Simplify.html" title="Fasteners Simplify/it">Fasteners Simplify</a>, <a href="../it\Fasteners_MatchTypeInner.html" title="Fasteners MatchTypeInner/it">Fasteners MatchTypeInner</a>, <a href="../it\Fasteners_MatchTypeOuter.html" title="Fasteners MatchTypeOuter/it">Fasteners MatchTypeOuter</a>, <a href="../it\Fasteners_BOM.html" title="Fasteners BOM/it">Fasteners BOM</a>, <a href="../it\Fasteners_ScrewCalculator.html" title="Fasteners ScrewCalculator/it">Fasteners ScrewCalculator</a>, <a class="mw-selflink selflink">Fasteners ChangeParameters</a></li></ul></div>
-</div></div>
+    <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Fasteners_workbench_icon.svg&amp;filetimestamp=20240511172114&amp;.html" class="mw-file-description"><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
+        <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
+<ul><li><a href="../it/Fasteners_Flip.html" title="Fasteners Flip/it">Fasteners Flip</a>, <a href="../it/Fasteners_Move.html" title="Fasteners Move/it">Fasteners Move</a>, <a href="../it/Fasteners_Simplify.html" title="Fasteners Simplify/it">Fasteners Simplify</a>, <a href="../it/Fasteners_MatchTypeInner.html" title="Fasteners MatchTypeInner/it">Fasteners MatchTypeInner</a>, <a href="../it/Fasteners_MatchTypeOuter.html" title="Fasteners MatchTypeOuter/it">Fasteners MatchTypeOuter</a>, <a href="../it/Fasteners_BOM.html" title="Fasteners BOM/it">Fasteners BOM</a>, <a href="../it/Fasteners_ScrewCalculator.html" title="Fasteners ScrewCalculator/it">Fasteners ScrewCalculator</a>, <a class="mw-selflink selflink">Fasteners ChangeParameters</a></li></ul></div>
+    </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20241214203150
+Cached time: 20260112123650
 Cache expiry: 86400
 Reduced expiry: false
-Complications: [show‐toc, no‐toc‐conversion]
-CPU time usage: 0.063 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 186/1000000
-Post‐expand include size: 6241/2097152 bytes
-Template argument size: 1563/2097152 bytes
+Complications: [show&#8208;toc]
+CPU time usage: 0.051 seconds
+Real time usage: 0.072 seconds
+Preprocessor visited node count: 181/1000000
+Post&#8208;expand include size: 6024/2097152 bytes
+Template argument size: 1577/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post‐expand size: 1297/5000000 bytes
+Unstrip post&#8208;expand size: 1522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.717      1 -total
- 41.09%    8.924      2 Template:Docnav/it
- 28.50%    6.189      1 Template:Fasteners_Tools_navi/it
- 16.34%    3.548      1 Template:GuiCommand/it
- 13.36%    2.901      1 Template:Navigation_menu_2
-  6.99%    1.518      1 Template:Button
-  4.45%    0.966      7 Template:MenuCommand
+100.00%   15.542      1 -total
+ 31.54%    4.902      1 Template:Fasteners_Tools_navi/it
+ 20.63%    3.206      1 Template:GuiCommand/it
+ 14.61%    2.270      1 Template:Docnav/it
+ 13.49%    2.097      1 Template:Docnav
+ 11.91%    1.851      1 Template:Navigation_menu_2
+  7.93%    1.233      1 Template:Button
+  7.39%    1.148      7 Template:MenuCommand
 -->
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20241214203149 and revision id 1477868. Rendering was triggered because: api-parse
+
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20260112123650 and revision id 1737458. Rendering was triggered because: edit-page
  -->
-</div></div><script src="../script.js"></script>
+</div>
+</div><script src="../site.js"></script>
