--- a/wiki/it/Fasteners_ChangeParameters.html
+++ b/wiki/it/Fasteners_ChangeParameters.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--complete" title="Fasteners Parameter&Auml;ndern (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Fasteners_ChangeParameters.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Fasteners ChangeParameters (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--complete" title="Fasteners Param&egrave;tres de la fixation (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--complete" title="Elementy Z&#322;&#261;czne: Zmie&#324; parametry (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Fasteners_ChangeParameters.html" class="mw-pt-progress mw-pt-progress--med" title="Fasteners Change fastener parameters (&#1048;&#1079;&#1084;&#1077;&#1085;&#1080;&#1090;&#1100; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1099; &#1080;&#1079;&#1076;&#1077;&#1083;&#1080;&#1103;) (38% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -69,13 +69,11 @@
 <li>Lasciare deselezionata la casella di controllo <b>Set length</b>. Questa opzione attualmente non funziona.</li></ol>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_ScrewCalculator.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Fasteners_ScrewCalculator.html" title="Fasteners ScrewCalculator/it">ScrewCalculator</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_ScrewCalculator.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Fasteners_3dPrintSettings.html" title="Fasteners 3dPrintSettings/it">Impostazioni stampa 3D</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Fasteners_workbench_icon.svg&amp;filetimestamp=20240511172114&amp;.html" class="mw-file-description"><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
@@ -84,33 +82,32 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112123650
+Cached time: 20260112123710
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.051 seconds
 Real time usage: 0.072 seconds
-Preprocessor visited node count: 181/1000000
-Post&#8208;expand include size: 6024/2097152 bytes
-Template argument size: 1577/2097152 bytes
+Preprocessor visited node count: 180/1000000
+Post&#8208;expand include size: 6045/2097152 bytes
+Template argument size: 1591/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1522/5000000 bytes
+Unstrip post&#8208;expand size: 1526/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.542      1 -total
- 31.54%    4.902      1 Template:Fasteners_Tools_navi/it
- 20.63%    3.206      1 Template:GuiCommand/it
- 14.61%    2.270      1 Template:Docnav/it
- 13.49%    2.097      1 Template:Docnav
- 11.91%    1.851      1 Template:Navigation_menu_2
-  7.93%    1.233      1 Template:Button
-  7.39%    1.148      7 Template:MenuCommand
+100.00%   16.515      1 -total
+ 42.40%    7.003      1 Template:Fasteners_Tools_navi/it
+ 18.81%    3.106      1 Template:GuiCommand/it
+ 17.08%    2.821      2 Template:Docnav
+ 10.80%    1.783      1 Template:Navigation_menu_2
+  8.77%    1.449      1 Template:Button
+  8.67%    1.431      7 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20260112123650 and revision id 1737458. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20260112123710 and revision id 1737460. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
