--- a/wiki/it/Fasteners_ScrewCalculator.html
+++ b/wiki/it/Fasteners_ScrewCalculator.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Fasteners_ScrewCalculator.html" class="mw-pt-progress mw-pt-progress--complete" title="Fasteners Schraubenrechner (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Fasteners_ScrewCalculator.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Fasteners ScrewCalculator (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Fasteners_ScrewCalculator.html" class="mw-pt-progress mw-pt-progress--complete" title="Fasteners Calculateur de trous de vis (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Fasteners_ScrewCalculator.html" class="mw-pt-progress mw-pt-progress--complete" title="Elementy Z&#322;&#261;czne: Kalkulator &#347;rub (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Fasteners_ScrewCalculator.html" class="mw-pt-progress mw-pt-progress--med" title="Fasteners Screw calculator (&#1055;&#1086;&#1076;&#1073;&#1086;&#1088; &#1076;&#1080;&#1072;&#1084;&#1077;&#1090;&#1088;&#1072; &#1089;&#1074;&#1077;&#1088;&#1083;&#1072; &#1087;&#1086;&#1076; &#1088;&#1077;&#1079;&#1100;&#1073;&#1091;) (33% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -71,14 +71,12 @@
 <li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> (basato sul sistema operativo) per chiudere la finestra di dialogo.</li></ol>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_BOM.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Fasteners_BOM.html" title="Fasteners BOM/it">BOM</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_ChangeParameters.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Fasteners_ChangeParameters.html" title="Fasteners ChangeParameters/it">ChangeParameters</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_3dPrintSettings.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Fasteners_3dPrintSettings.html" title="Fasteners 3dPrintSettings/it">Impostazioni stampa 3D</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Fasteners_workbench_icon.svg&amp;filetimestamp=20240511172114&amp;.html" class="mw-file-description"><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Fasteners_Workbench.html" title="Fasteners Workbench/it">Fasteners</a>
@@ -87,33 +85,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112123909
+Cached time: 20260112123913
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.056 seconds
-Real time usage: 0.097 seconds
-Preprocessor visited node count: 196/1000000
-Post&#8208;expand include size: 7521/2097152 bytes
-Template argument size: 1741/2097152 bytes
+Real time usage: 0.085 seconds
+Preprocessor visited node count: 195/1000000
+Post&#8208;expand include size: 7533/2097152 bytes
+Template argument size: 1749/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1518/5000000 bytes
+Unstrip post&#8208;expand size: 1522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.069      1 -total
- 46.98%    8.489      1 Template:Fasteners_Tools_navi/it
- 23.75%    4.292      1 Template:Navigation_menu_2
- 13.48%    2.435      2 Template:Docnav/it
- 12.22%    2.208      1 Template:GuiCommand/it
-  8.92%    1.611      1 Template:Caption
-  7.98%    1.442      2 Template:Button
-  6.71%    1.212      5 Template:MenuCommand
+100.00%   16.835      1 -total
+ 32.09%    5.402      1 Template:Fasteners_Tools_navi/it
+ 18.05%    3.038      2 Template:Docnav/it
+ 16.03%    2.699      1 Template:GuiCommand/it
+ 11.36%    1.913      5 Template:MenuCommand
+ 10.57%    1.779      1 Template:Navigation_menu_2
+  9.62%    1.620      1 Template:Caption
+  8.83%    1.487      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354667-0!canonical and timestamp 20260112123908 and revision id 1737462. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354667-0!canonical and timestamp 20260112123913 and revision id 1737464. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
