--- a/wiki/it/Fasteners_ChangeParameters.html
+++ b/wiki/it/Fasteners_ChangeParameters.html
@@ -82,12 +82,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112123710
+Cached time: 20260112123947
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.051 seconds
-Real time usage: 0.072 seconds
+CPU time usage: 0.056 seconds
+Real time usage: 0.136 seconds
 Preprocessor visited node count: 180/1000000
 Post&#8208;expand include size: 6045/2097152 bytes
 Template argument size: 1591/2097152 bytes
@@ -98,16 +98,17 @@ Unstrip post&#8208;expand size: 1526/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.515      1 -total
- 42.40%    7.003      1 Template:Fasteners_Tools_navi/it
- 18.81%    3.106      1 Template:GuiCommand/it
- 17.08%    2.821      2 Template:Docnav
- 10.80%    1.783      1 Template:Navigation_menu_2
-  8.77%    1.449      1 Template:Button
-  8.67%    1.431      7 Template:MenuCommand
+100.00%   28.351      1 -total
+ 37.68%   10.684      1 Template:Fasteners_Tools_navi/it
+ 17.19%    4.873      1 Template:GuiCommand/it
+ 14.30%    4.055      1 Template:Navigation_menu_2
+ 13.43%    3.808      1 Template:Docnav/it
+ 12.43%    3.524      1 Template:Button
+ 11.81%    3.348      1 Template:Docnav
+  5.27%    1.494      7 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20260112123710 and revision id 1737460. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20260112123947 and revision id 1737466. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
