--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Preferences/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Preferences&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Preferences.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Preferences (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Pr&eacute;f&eacute;rences (69% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Preferences/hr (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
@@ -213,26 +213,24 @@
 </p>
 <h2><span class="mw-headline" id="Erweitert">Erweitert</span></h2>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Preferences_TechDraw_Page_Advanced.png&amp;filetimestamp=20241210145942&amp;.html" class="mw-file-description"><img src="../File/Preferences_TechDraw_Page_Advanced.png" decoding="async" width="350" height="426" class="mw-file-element" data-file-width="589" data-file-height="717"></a><figcaption>Erweiterte Einstellungen</figcaption></figure>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Fl&auml;chen erkennen</b>: Wenn angehakt, versucht TechDraw, Fl&auml;chen unter Verwendung der Liniensegmente zu erzeugen, die vom Algorithmus zum Entfernen verdeckter Linien zur&uuml;ckgegeben werden. Fl&auml;chen m&uuml;ssen erkannt werden, um <a href="../de/TechDraw_Hatching.html" title="TechDraw Hatching/de">Schraffieren</a> verwenden zu k&ouml;nnen, aber bei komplexen Modellen kann es zu Leistungseinbu&szlig;en kommen.</li>
-<li><b>Fortschritt berichten</b>: Gibt Fortschrittsmeldungen aus, w&auml;hrend die darzustellende Geometrie berechnet wird. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
+<li><b>Fortschritt anzeigen</b>: Gibt Fortschrittsmeldungen aus, w&auml;hrend die darzustellende Geometrie berechnet wird. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
 <li>'<i>Neuen Fl&auml;chenfinder-Algorithmus verwenden</i>: Wenn aktiviert, wird der neue Fl&auml;chenfinder-Algorithmus verwendet, anstatt des originalen. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
-<li><b>Automatische Korrektur der Ma&szlig;referenzen</b>: Wenn aktiviert, wird versucht Ma&szlig;referenzen zu aktualisieren, wenn sich das Modell &auml;ndert. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
+<li><b>Ma&szlig;referenzen automatisch korrigieren</b>: Wenn aktiviert, wird versucht Ma&szlig;referenzen zu aktualisieren, wenn sich das Modell &auml;ndert. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
 <li><b>Schnittkanten zeigen</b>: Hebt den Rand des ausgeschnittenen Abschnitts in <a href="../de/TechDraw_SectionView.html" title="TechDraw SectionView/de">Schnittansichten</a> hervor.</li>
-<li><b>Verbinden vor Schnitterzeugung</b>: F&uuml;hrt eine Vereinigungsoperation an der bzw. den Eingangsform(en) durch, bevor die Schnittansicht berechnet wird.</li>
-<li><b>Durch klicken den Arbeitsbereich wechseln</b>: Wenn aktiviert, wird, sobald ein Doppelklick auf ein Zeichnungsblatt (Page-Objekt) erfolgt, zu TechDraw gewechselt und das Blatt wird angezeigt. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
-<li><b>Un&uuml;bliche Kanten erlauben</b>: Schlie&szlig;t Kanten mit unerwarteter Geometrie in die Ergebnisse ein, z.B. Nulll&auml;ngen.</li>
-<li><b>Formen validieren</b>: Wenn aktiviert, werden Eingabeformen auf Fehler &uuml;berpr&uuml;ft, bevor sie verwendet werden, und ung&uuml;ltige Formen werden ausgelassen. Es kann langsamer sein, sollte aber Abst&uuml;rze verhindern. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
-<li><b>Fehlersuche und -bereinigung Schnittansicht</b>: Gibt Zwischenergebnisse w&auml;hrend der Verarbeitung einer Schnittansicht aus.</li>
-<li><b>Debug Bad Shape</b>: Wenn aktiviert, werden Formen, die bei der &Uuml;berpr&uuml;fung durchgefallen sind, f&uuml;r eine sp&auml;tere Analyse als brep-Daten gespeichert. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
-<li><b>Fehlersuche und -bereinigung Detailansicht</b>: Gibt Zwischenergebnisse w&auml;hrend der Verarbeitung einer Detailansicht aus.</li>
+<li><b>Vor Schnitterstellung vereinigen</b>: F&uuml;hrt eine Vereinigungsoperation an der bzw. den Eingangsform(en) durch, bevor die Schnittansicht berechnet wird.</li>
+<li><b>Arbeitsbereich mit Klick wechseln</b>: Wenn aktiviert, wird, sobald ein Doppelklick auf ein Zeichnungsblatt (Page-Objekt) erfolgt, zu TechDraw gewechselt und das Blatt wird angezeigt. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
+<li><b>Un&uuml;bliche Kanten zulassen</b>: Schlie&szlig;t Kanten mit unerwarteter Geometrie in die Ergebnisse ein, z. B. Nulll&auml;ngen.</li>
+<li><b>Formen pr&uuml;fen</b>: Wenn aktiviert, werden Eingabeformen auf Fehler &uuml;berpr&uuml;ft, bevor sie verwendet werden, und ung&uuml;ltige Formen werden ausgelassen. Es kann langsamer sein, sollte aber Abst&uuml;rze verhindern. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
+<li><b>Schnittansicht auf Fehler untersuchen</b>: Gibt Zwischenergebnisse w&auml;hrend der Verarbeitung einer Schnittansicht aus.</li>
+<li><b>Schlechte Form auf Fehler untersuchen</b>: Wenn aktiviert, werden Formen, die bei der &Uuml;berpr&uuml;fung durchgefallen sind, f&uuml;r eine sp&auml;tere Analyse als brep-Daten gespeichert. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
+<li><b>Detailansicht auf Fehler untersuchen</b>: Gibt Zwischenergebnisse w&auml;hrend der Verarbeitung einer Detailansicht aus.</li>
 <li><b>Schruppdurchg&auml;nge f&uuml;r &uuml;berlappende Kanten</b>: Die Anzahl der Versuche zum Entfernen von &uuml;berlappenden Kanten, die vom Hidden-Line-Removal-Algorithmus zur&uuml;ckgegeben werden. Ein Wert von 0 bedeutet kein Schruppen. Werte &uuml;ber 2 sind im Allgemeinen nicht sinnvoll. Jeder Versuch tr&auml;gt zur ben&ouml;tigten Zeit f&uuml;r die Erstellung der Zeichnung bei. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
 <li><b>Auswahlbereich f&uuml;r Kanten</b>: Gr&ouml;&szlig;e des Auswahlbereichs um Kanten herum. Die Unsch&auml;rfeeinheit ist ungef&auml;hr 0.1 mm, abh&auml;ngig vom aktuellen Zoom. Der Standardwert ist 10. Werte von 20 bis 30 erleichtern die Auswahl von Kanten deutlich. Gro&szlig;e Werte f&uuml;hren zu &Uuml;berlappungen mit anderen Zeichnungselementen.</li>
-<li><b>Fangbereich f&uuml;r Mittelpunktsmarkierungen</b>: Auswahlbereich um Mittenmarkierungen herum. Die Unsch&auml;rfeeinheit ist ungef&auml;hr 0.1 mm, abh&auml;ngig vom aktuellen Zoom.</li>
+<li><b>Auswahlbereich f&uuml;r Mittelpunktsmarkierungen</b>: Auswahlbereich um Mittenmarkierungen herum. Die Unsch&auml;rfeeinheit ist ungef&auml;hr 0.1 mm, abh&auml;ngig vom aktuellen Zoom.</li>
 <li><b>Max. SVG-Schraffur-Felder</b>: Die maximale Anzahl (Limit) von SVG-Kacheln mit einer Gr&ouml;&szlig;e von 64x64 Pixeln, die zum Schraffieren einer einzelnen Fl&auml;che verwendet werden. Bei gro&szlig;en Ma&szlig;st&auml;ben k&ouml;nnte man einen Fehler wegen zu vieler SVG-Kacheln erhalten, dann muss man das Kachellimit erh&ouml;hen.</li>
 <li><b>Max. PAT-Schraffur-Segmente</b>: Die maximale Anzahl von Schraffursegmenten, die beim Schraffieren einer Fl&auml;che mit einem PAT-Muster verwendet werden.</li>
 <li><b>Hinweisfeld ziehen</b>: Die Modifikatortaste f&uuml;r das Ziehen des Hinweisfeldes kann angepasst werden, um Konflikte mit dem Betriebssystem oder der Tastenzuordnungen der Navigationsart zu verhindern. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -276,35 +274,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112123412
+Cached time: 20260112124350
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.172 seconds
-Preprocessor visited node count: 630/1000000
+CPU time usage: 0.103 seconds
+Real time usage: 0.141 seconds
+Preprocessor visited node count: 629/1000000
 Post&#8208;expand include size: 28248/2097152 bytes
 Template argument size: 10597/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1722/5000000 bytes
+Unstrip post&#8208;expand size: 1726/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.053      1 -total
- 37.06%    8.543      1 Template:TechDraw_Tools_navi/de
- 20.17%    4.651      2 Template:Navigation_menu_2
- 11.85%    2.732     33 Template:Version/de
-  9.74%    2.246      2 Template:Docnav/de
-  8.17%    1.884      1 Template:Userdocnavi/de
-  6.65%    1.532      2 Template:Button
-  6.36%    1.466      2 Template:MenuCommand
-  4.95%    1.142      1 Template:KEY
-  4.78%    1.101      1 Template:TOCright
+100.00%   22.124      1 -total
+ 28.78%    6.368      1 Template:TechDraw_Tools_navi/de
+ 17.53%    3.879      2 Template:Navigation_menu_2
+ 12.33%    2.728      2 Template:Docnav/de
+ 10.66%    2.358      1 Template:Userdocnavi/de
+ 10.14%    2.243     33 Template:Version/de
+  9.02%    1.995      1 Template:TOCright
+  7.66%    1.694      2 Template:MenuCommand
+  5.87%    1.299      1 Template:KEY
+  5.80%    1.283      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112123412 and revision id 1737456. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112124350 and revision id 1737470. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
