Created page with "Manual:Příprava modelů pro 3D tisk"

--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -9,7 +9,8 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Preparing_models_for_3D_printing.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1055;&#1086;&#1076;&#1075;&#1086;&#1090;&#1086;&#1074;&#1082;&#1072; &#1076;&#1083;&#1103; 3D &#1087;&#1077;&#1095;&#1072;&#1090;&#1080; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Preparing_models_for_3D_printing.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Preparing models for 3D printing/zh-cn (0% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
-<li><a href="../ja/Manual;Preparing_models_for_3D_printing.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;3D&#21360;&#21047;&#12398;&#12383;&#12417;&#12398;&#12514;&#12487;&#12523;&#12398;&#28310;&#20633; (55% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
+<li><a href="../ja/Manual;Preparing_models_for_3D_printing.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;3D&#21360;&#21047;&#12398;&#12383;&#12417;&#12398;&#12514;&#12487;&#12523;&#12398;&#28310;&#20633; (55% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
+<li><a href="../ko/Manual;Preparing_models_for_3D_printing.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:3D &#54532;&#47553;&#54021;&#51012; &#50948;&#54620; &#47784;&#45944; &#51456;&#48708;&#54616;&#44592; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Modeling_for_product_design.html" title="Manual:Modeling for product design">Modeling for product design</a></div>
     <div><a href="../Manual;Generating_2D_drawings.html" title="Manual:Generating 2D drawings">Generating 2D drawings</a>
@@ -172,29 +173,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251013110020
+Cached time: 20260112124416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.135 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 119/1000000
+CPU time usage: 0.090 seconds
+Real time usage: 0.132 seconds
+Preprocessor visited node count: 120/1000000
 Post&#8208;expand include size: 8337/2097152 bytes
 Template argument size: 740/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2757/5000000 bytes
+Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.217      1 -total
- 75.13%    7.676      1 Template:Manual:TOC
- 57.38%    5.863      1 Manual:Summary/cs
- 18.96%    1.937      2 Template:Docnav
+100.00%    9.987      1 -total
+ 66.46%    6.637      1 Template:Manual:TOC
+ 49.63%    4.956      1 Manual:Summary/cs
+ 29.00%    2.896      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20251013110020 and revision id 1661545. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112124416 and revision id 1661545. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
