--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -12,8 +12,8 @@
 <li><a href="../ja/Manual;Preparing_models_for_3D_printing.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;3D&#21360;&#21047;&#12398;&#12383;&#12417;&#12398;&#12514;&#12487;&#12523;&#12398;&#28310;&#20633; (55% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;Preparing_models_for_3D_printing.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:3D &#54532;&#47553;&#54021;&#51012; &#50948;&#54620; &#47784;&#45944; &#51456;&#48708;&#54616;&#44592; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Modeling_for_product_design.html" title="Manual:Modeling for product design">Modeling for product design</a></div>
-    <div><a href="../Manual;Generating_2D_drawings.html" title="Manual:Generating 2D drawings">Generating 2D drawings</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Modeling_for_product_design.html" title="Manual:Modeling for product design">Modelov&aacute;n&iacute; pro design produkt&#367;</a></div>
+    <div><a href="../Manual;Generating_2D_drawings.html" title="Manual:Generating 2D drawings">Generov&aacute;n&iacute; 2D v&yacute;kres&#367;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -173,15 +173,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112124416
+Cached time: 20260112124531
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.132 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.125 seconds
 Preprocessor visited node count: 120/1000000
-Post&#8208;expand include size: 8337/2097152 bytes
-Template argument size: 740/2097152 bytes
+Post&#8208;expand include size: 8364/2097152 bytes
+Template argument size: 758/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -189,13 +189,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.987      1 -total
- 66.46%    6.637      1 Template:Manual:TOC
- 49.63%    4.956      1 Manual:Summary/cs
- 29.00%    2.896      2 Template:Docnav
+100.00%    7.164      1 -total
+ 70.57%    5.056      1 Template:Manual:TOC
+ 55.21%    3.955      1 Manual:Summary/cs
+ 24.74%    1.772      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112124416 and revision id 1661545. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112124531 and revision id 1737473. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
