Created page with "=== Videa ==="

--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -160,7 +160,9 @@
 <li><a rel="nofollow" class="external text" href="https://github.com/cblt2l/FreeCAD-CuraEngine-Plugin">The Cura Workbench</a></li>
 <li><a href="../CAM_Workbench.html" title="CAM Workbench">The CAM Workbench</a></li>
 <li><a rel="nofollow" class="external text" href="http://camotics.org/">Camotics</a></li></ul>
-<h3><span class="mw-headline" id="Videos">Videos</span></h3>
+<p><span id="Videos"></span>
+</p>
+<h3><span class="mw-headline" id="Videa">Videa</span></h3>
 <ul><li><a rel="nofollow" class="external text" href="https://www.youtube.com/playlist?list=PL6Fiih6ItYsWCE20KtUJYpiDPrCA2rVpN">How To Use FreeCAD For 3D Printing | Using The Realthunder Branch</a> A video playlist by Maker Tales about how to use FreeCAD for 3D printing.</li></ul>
 <p><br>
 </p>
@@ -173,13 +175,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112124547
+Cached time: 20260112124620
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.105 seconds
-Preprocessor visited node count: 120/1000000
+CPU time usage: 0.101 seconds
+Real time usage: 0.158 seconds
+Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
 Highest expansion depth: 5/100
@@ -189,13 +191,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.035      1 -total
- 68.31%    6.855      1 Template:Manual:TOC
- 50.05%    5.023      1 Manual:Summary/cs
- 26.82%    2.691      2 Template:Docnav
+100.00%   10.962      1 -total
+ 71.13%    7.797      1 Template:Manual:TOC
+ 55.83%    6.120      1 Manual:Summary/cs
+ 25.62%    2.808      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112124547 and revision id 1737475. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112124620 and revision id 1737477. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
