--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -151,7 +151,7 @@
 <ul><li>The STL file generated in this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.stl">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.stl</a></li>
 <li>The file generated during this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/path.FCStd">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/path.FCStd</a></li>
 <li>The G-code file generated in this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.gcode">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.gcode</a></li></ul>
-<p><b>Read more</b>
+<p><b>Dal&scaron;&iacute; informace:</b>
 </p>
 <ul><li><a href="../Mesh_Workbench.html" title="Mesh Workbench">The Mesh Workbench</a></li>
 <li><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/STL_%28file_format%29">The STL file format</a></li>
@@ -175,12 +175,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112124620
+Cached time: 20260112124726
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.158 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.118 seconds
 Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -191,13 +191,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.962      1 -total
- 71.13%    7.797      1 Template:Manual:TOC
- 55.83%    6.120      1 Manual:Summary/cs
- 25.62%    2.808      2 Template:Docnav
+100.00%    8.576      1 -total
+ 74.38%    6.379      1 Template:Manual:TOC
+ 55.07%    4.723      1 Manual:Summary/cs
+ 21.51%    1.845      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112124620 and revision id 1737477. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112124726 and revision id 1737479. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
