Created page with "Nejběžnější technikou přípravy 3D modelu pro tisk je export 3D objektu z FreeCADu do specializovaného softwaru známého jako slicer. Slicer generuje G-kód rozřezáním modelu na tenké vrstvy, které 3D tiskárna následuje, aby objekt vytvořila vrstvu po vrstvě. Protože mnoho 3D tiskáren – zejména domácí nebo hobby modely – má jedinečné konfigurace, programy slicerů poskytují širokou škálu pokročilých nastavení. Tato nastavení vám umo..."

--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -80,7 +80,7 @@
 </p>
 <meta property="mw:PageProp/toc">
 <h3><span id="Export_do_slicer.C5.AF"></span><span class="mw-headline" id="Export_do_slicer&#367;">Export do slicer&#367;</span></h3>
-<p>The most common technique for preparing a 3D model for printing involves exporting the 3D object from FreeCAD to a specialized software known as a slicer. The slicer generates G-code by slicing the model into thin layers, which the 3D printer will follow to build the object layer by layer. Because many 3D printers&mdash;especially home-built or hobbyist models&mdash;have unique configurations, slicer programs provide a wide range of advanced settings. These settings allow you to customize key parameters, such as layer height, print speed, infill density, and support structures, ensuring the G-code is tailored to the specific features and capabilities of your printer.
+<p>Nejb&#283;&#382;n&#283;j&scaron;&iacute; technikou p&#345;&iacute;pravy 3D modelu pro tisk je export 3D objektu z FreeCADu do specializovan&eacute;ho softwaru zn&aacute;m&eacute;ho jako slicer. Slicer generuje G-k&oacute;d roz&#345;ez&aacute;n&iacute;m modelu na tenk&eacute; vrstvy, kter&eacute; 3D tisk&aacute;rna n&aacute;sleduje, aby objekt vytvo&#345;ila vrstvu po vrstv&#283;. Proto&#382;e mnoho 3D tisk&aacute;ren &ndash; zejm&eacute;na dom&aacute;c&iacute; nebo hobby modely &ndash; m&aacute; jedine&#269;n&eacute; konfigurace, programy slicer&#367; poskytuj&iacute; &scaron;irokou &scaron;k&aacute;lu pokro&#269;il&yacute;ch nastaven&iacute;. Tato nastaven&iacute; v&aacute;m umo&#382;&#328;uj&iacute; p&#345;izp&#367;sobit kl&iacute;&#269;ov&eacute; parametry, jako je v&yacute;&scaron;ka vrstvy, rychlost tisku, hustota v&yacute;pln&#283; a podp&#367;rn&eacute; struktury, a zajistit tak, &#382;e G-k&oacute;d bude p&#345;izp&#367;soben specifick&yacute;m vlastnostem a schopnostem va&scaron;&iacute; tisk&aacute;rny.
 </p><p>Many slicers also offer simulation and print validation features that are invaluable for previewing the print process. You can visualize the toolpath for each layer, which helps detect potential issues like overhangs that may require supports or areas where cooling might be insufficient. This pre-print validation ensures your model is properly prepared before the print begins, avoiding failed prints or wasted material.
 </p><p>Slicers often include additional insights, such as estimating print time, material usage, and cost based on the filament or resin being used. This allows you to make informed decisions about the printing process and tweak settings for efficiency or material conservation. Although the deeper intricacies of 3D printing&mdash;such as machine calibration, material selection, and post-processing&mdash;are beyond the scope of this guide, we will focus on how to properly export your FreeCAD model and use slicer software to ensure the output is correct and optimized for your specific printer
 </p>
@@ -176,12 +176,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112130940
+Cached time: 20260112131007
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.110 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.202 seconds
 Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -192,13 +192,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.349      1 -total
- 73.87%    6.906      1 Template:Manual:TOC
- 48.71%    4.554      1 Manual:Summary/cs
- 22.05%    2.062      2 Template:Docnav
+100.00%   11.006      1 -total
+ 72.70%    8.001      1 Template:Manual:TOC
+ 57.70%    6.350      1 Manual:Summary/cs
+ 22.65%    2.493      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112130940 and revision id 1737497. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112131007 and revision id 1737499. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
